# zai-monitor

./: .env.example  .gitignore  README.md  accounts.example.toml  alerts.py  config.py  config.toml  fetcher.py  install.sh  probe.py  pyproject.toml  requirements.txt  setup_telegram.py  store.py  tui.py
launchd/: ai.zai-monitor.alerts.plist
systemd/: zai-monitor-alerts.service
