[project]
name = "zai-monitor"
version = "0.1.0"
description = "Monitor Z.ai GLM Coding Plan quotas (5-hour & weekly) with a TUI and Telegram alerts"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
tui = ["textual>=0.60", "rich>=13.7"]
telegram = ["python-telegram-bot>=21"]
dev = ["ruff>=0.5"]

# This project is a flat collection of standalone scripts (run from the project
# dir), NOT an importable package. Explicitly disable setuptools auto-discovery
# so it doesn't try to package the launchd/ and systemd/ directories.
[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
